# gpt

./: .gitignore  fineweb.py  gpt.py  minigpt.ipynb  play.ipynb  pyproject.toml  train_gpt2.py
gpt2/: play.ipynb
minigpt/: dataset.py  model.py  utils.py
